# coded-agents-challenge

./: README.md
submissions/Test/: README.md
submissions/adithya_m/: agent.mermaid  api_server.py  graph.py  main.py  models.py  nodes.py  pyproject.toml  readme.md  state.py
submissions/aditya_giri/: README.md  agent.mermaid  agents.py  input.json  main.py  state.py  uipath.json
submissions/aroosa_hoda/: README.md  agent.mermaid  entry-points.json  input_eligible.json  input_human_review.json  input_skill_gap.json  main.py  pyproject.toml
submissions/manikandan_ai_risk_monitor/: README.md  agent.mermaid  entry-points.json  high_input.json  high_output.json  input.json  langgraph.json  low_input.json  low_output.json  main.py  medium_input.json  medium_output.json  output.json  pyproject.toml  uipath.json
submissions/manikandan_ai_risk_monitor/.agent/: CLI_REFERENCE.md  SDK_REFERENCE.md
submissions/manikandan_ai_risk_monitor/.uipath/: .telemetry.json
submissions/manikandan_ai_risk_monitor/__uipath/: state.db
submissions/nagasiv_cyber/: README.md  agent.mermaid  input.json  main.py  pyproject.toml  uipath.json
submissions/nishanth_p/: .gitignore  README.md  agent.mermaid  email_triage_agent.mermaid  entry-points.json  langgraph.json  main.py  output.txt  output_utf8.txt  pyproject.toml  test_input.json
submissions/nishanth_p/.agent/: CLI_REFERENCE.md  SDK_REFERENCE.md
submissions/rajneesh_khare/: README.md  agent.mermaid  entry-points.json  input.json  main.py  pyproject.toml  requirements.txt  uipath.json
submissions/sneha_ram/: agent.mermaid  entry-points.json  input.json  pyproject.toml
submissions/sushree_subhangini_mohanty/: README.md  agent.mermaid  main.py  pyproject.toml
