[project]
name = "internship-checker"
version = "0.1.0"
description = "Internship Eligibility Checker using LangGraph and UiPath SDK"
authors = [
    { name = "Adithya M", email = "[adi767158gmail.com]" }
]
dependencies = [
    "langchain",
    "langgraph",
    "langchain-google-genai",
    "uipath-python-sdk",
    "pydantic",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
