[project]
name = "manikandan_ai_risk_monitor"
version = "1.0.0"
description = "UiPath coded LangGraph agent for AI action risk monitoring"
readme = "README.md"

authors = [{ name = "Manikandan", email = "mmani786ms@gmail.com" }]

requires-python = ">=3.11,<4.0"
dependencies = [
    "uipath-langchain>=0.8.5,<0.9.0",
    "langgraph>=1.0.10,<2.0.0",
    "langchain>=1.2.10,<2.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
