[project]
name = "resume-reviewer-agent"
version = "0.1.0"
description = "AI-powered Resume Reviewer Agent for campus placements using LangGraph + UiPath SDK"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.11"

dependencies = [
    "uipath-langchain>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
